--- a/style.css
+++ b/style.css
@@ -28,6 +28,13 @@ form > div > input[type=submit] {
     display: block;
     width: 100%;
     padding: 5px;
+    border-radius: 10px;
     
-    
+}
+div#res{
+    background-color: white;
+    color: black;
+    margin-top: 5px;
+    padding: 5px;
+    border-radius: 10px;
 }
