--- a/style.css
+++ b/style.css
@@ -29,10 +29,10 @@ form > div > input[type=submit] {
     width: 100%;
     padding: 5px;
     border-radius: 10px;
+    cursor: pointer;
 }
 div#res{
-    background-color: white;
-    color: black;
+    background-image: linear-gradient(white , red);
     margin-top: 5px;
     padding: 5px;
     border-radius: 10px;
